workspace = { members = ["merlin_core", "net/wasabi"] }
[package]
name = "merlin"
version = "0.1.0"
edition = "2021"
default-run = "merlin"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "merlin"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
merlin_core = { path = "./merlin_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
